--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "docker:prod:build": "docker-compose -f docker-compose.prod.yml build",
     "db:migrate": "npm run db:migrate --workspace=api",
     "db:seed": "npm run db:seed --workspace=api",
-    "db:reset": "npm run db:reset --workspace=api"
+    "db:reset": "npm run db:reset --workspace=api",
+    "test": "npm run test --workspace=api",
+    "test:watch": "npm run test:watch --workspace=api"
   },
   "devDependencies": {
-    "concurrently": "^9.1.0"
+    "concurrently": "^9.1.0",
+    "pactum-supertest": "^1.0.0"
   },
   "repository": {
     "type": "git",
