--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "dev:api": "npm run dev --workspace=api",
-    "dev:client": "cd client && npm start",
+    "dev:client": "cd client && npm run dev",
     "dev": "concurrently \"npm run dev:api\" \"npm run dev:client\"",
     "build": "cd client && npm run build",
     "docker:up": "docker-compose up -d",
